--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "witty/laravel-push-notification",
     "description": "Laravel 5 Package for sending push notifications to Android and iOS devices",
     "keywords": ["apns", "gcm", "push", "notification", "laravel", "laravel 5"],
+    "license": "MIT",
     "authors": [
         {
             "name": "Larkin Whitaker",
